--- a/app/scss/var.scss
+++ b/app/scss/var.scss
@@ -1,7 +1,13 @@
-//
-// Font stacks
-$main-ff: 'Source Sans Pro', 'sans pro', 'serif';
+// Fonts
+$main-ff: 'Poppins-Regular', sans-serif;
+$main-ff-bold: 'Poppins-Bold', sans-serif;
 
-//
 // Colors
-$white: #ffffff;
+$mainDark: #111111;
+
+$mainGray: #696969;
+$secondGray: #8B8B8B;
+$textGray: #909090;
+$lightGray: #DEDEDE;
+
+$mainBlue: #0052FF;
