--- a/app/scss/base/base-styles.scss
+++ b/app/scss/base/base-styles.scss
@@ -1,12 +1,12 @@
-*{
+* {
   box-sizing: border-box;
 }
 
-html { 
-    font-family: $main-ff;
-    font-size: 16px;
-    line-height: 22px;
-    height: 100%;
+html {
+  font-family: $main-ff;
+  font-size: 16px;
+  line-height: 22px;
+  height: 100%;
 }
 body {
   margin: 0;
@@ -25,10 +25,11 @@ a {
   color: black;
 }
 
-section {
-  height: 100vh;
-  h1 {
-    text-align: center;
-    color: #fff;
-  }
+p,
+h2 {
+  margin: 0;
+}
+
+main {
+  overflow: hidden;
 }
