--- a/app/scss/base/helpers.scss
+++ b/app/scss/base/helpers.scss
@@ -16,25 +16,44 @@
   align-items: center;
 }
 
+.caption {
+  font-size: 16px;
+  letter-spacing: 1.24px;
+  line-height: 25px;
+  color: $mainBlue;
+  text-transform: uppercase;
+}
+
+.text {
+  font-size: 16px;
+  line-height: 25px;
+  color: $secondGray;
+}
+
+.success {
+  color: green;
+}
+
 // CONTAINER
 
 .container {
+  padding-left: 128px;
   max-width: 1366px;
   margin: 0 auto;
 
-  // @include xs {
-  //   max-width: auto;
-  // }
-  // @include sm {
-  //   max-width: 540px;
-  // }
-  // @include md {
-  //   max-width: 720px;
-  // }
-  // @include lg {
-  //   max-width: 960px;
-  // }
-  // @include xl {
-  //   max-width: 1366px;
-  // }
+  @include xl {
+  }
+  @include lg {
+    padding-left: 80px;
+  }
+  @include md {
+    padding-left: 40px;
+  }
+  @include sm {
+    padding-left: 20px;
+  }
+  @include xs {
+    padding-left: 128px;
+    max-width: auto;
+  }
 }
