--- a/app/scss/modules/header.scss
+++ b/app/scss/modules/header.scss
@@ -1,6 +1,6 @@
 .header {
   width: 100%;
-  padding: 38px 128px 0;
+  padding: 38px 0 0;
 
   will-change: transform;
   transition: background 0.3s, -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
@@ -10,16 +10,8 @@
   transform: translateY(0);
   -webkit-transform: translateY(0);
 
-  @include lg {
-    padding: 38px 80px 0;
-  }
-
   @include md {
-    padding: 38px 40px 0;
-  }
-
-  @include xs {
-    padding: 25px 20px 0;
+    padding-top: 30px;
   }
 
   &__logo {
@@ -30,9 +22,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-right: 128px;
 
     @include lg {
       display: block;
+      padding-right: 80px;
+    }
+    @include md {
+      padding-right: 40px;
+    }
+    @include sm {
+      padding-right: 25px;
     }
 
     &-desktop {
