--- a/app/scss/var.scss
+++ b/app/scss/var.scss
@@ -4,10 +4,12 @@ $main-ff-bold: 'Poppins-Bold', sans-serif;
 
 // Colors
 $mainDark: #111111;
+$secondDark: #1E1E1E;;
 
 $mainGray: #696969;
 $secondGray: #8B8B8B;
 $textGray: #909090;
 $lightGray: #DEDEDE;
+$whiteGray: #EDF1FA;
 
 $mainBlue: #0052FF;
