--- a/app/scss/modules/about-us.scss
+++ b/app/scss/modules/about-us.scss
@@ -3,9 +3,25 @@
   background: linear-gradient(180deg, $mainDark 20%, #fff 20%);
   padding-bottom: 145px;
 
+  @include md {
+    padding-bottom: 100px;
+  }
+
+  @include sm {
+    padding-bottom: 50px;
+  }
+
   &-content {
-    padding: 180px 0 0 165px;
+    padding: 180px 100px 0 165px;
     background-color: $lightGray;
+
+    @include lg {
+      padding: 100px 30px 0 130px;
+    }
+
+    @include sm {
+      padding: 0 30px 0 40px;
+    }
 
     &-text {
       display: inline-block;
@@ -15,12 +31,26 @@
       font-size: 36px;
       line-height: 60px;
 
+      @include lg {
+        font-size: 26px;
+      }
+
+      @include sm {
+        padding-top: 20px;
+        font-size: 20px;
+        line-height: 38px;
+      }
+
       &__link {
         padding: 0 3px;
         display: inline-block;
         height: 50px;
         color: #fff;
         background-color: $mainBlue;
+
+        @include sm {
+          height: 32px;
+        }
       }
 
       span {
@@ -31,6 +61,10 @@
 
     &__link {
       padding-bottom: 175px;
+
+      @include lg {
+        padding-bottom: 100px;
+      }
 
       &:before {
         content: "";
@@ -59,6 +93,15 @@
       height: 100%;
       width: 100%;
       background-color: $lightGray;
+    }
+  }
+
+  &__mobile-img {
+    display: none;
+
+    @include sm {
+      width: 100%;
+      display: block;
     }
   }
 }
