--- a/app/scss/modules/header.scss
+++ b/app/scss/modules/header.scss
@@ -130,11 +130,13 @@
       border-radius: 5px;
       background-color: transparent;
       float: right;
-      height: 38px;
-      width: 38px;
+      height: 18px;
+      width: 24px;
       cursor: pointer;
-      padding: 8px 8px;
 
+      &.open span {
+        margin-bottom: 5px;
+      }
       &.open span:first-child {
         transform: rotate(45deg) translate(4.4px, 4.4px);
       }
@@ -143,7 +145,7 @@
         opacity: 0;
       }
       &.open span:last-child {
-        transform: rotate(-45deg) translate(4.4px, -4.4px);
+        transform: rotate(-45deg) translate(4px, -4px);
       }
       @include md {
         position: relative;
@@ -153,9 +155,9 @@
       span {
         position: relative;
         display: block;
-        height: 2px;
+        height: 1px;
         width: 100%;
-        margin-top: 4px;
+        margin-bottom: 7px;
         background-color: #fff;
         transition: all 0.25s;
       }
