--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -7,7 +7,9 @@
 @import 'base/helpers';
 @import 'base/base-styles';
 @import 'base/fonts';
+@import 'base/animations.scss';
 @import 'modules/buttons';
+@import 'modules/slider';
 
 // modules
 @import 'modules/header';
