--- a/app/scss/var.scss
+++ b/app/scss/var.scss
@@ -4,7 +4,7 @@ $main-ff-bold: 'Poppins-Bold', sans-serif;
 
 // Colors
 $mainDark: #111111;
-$secondDark: #1E1E1E;;
+$secondDark: #1E1E1E;
 
 $mainGray: #696969;
 $secondGray: #8B8B8B;
