--- a/app/scss/modules/footer.scss
+++ b/app/scss/modules/footer.scss
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-right: 24px;
 
     &__logo {
       line-height: 8px;
