--- a/app/scss/modules/header.scss
+++ b/app/scss/modules/header.scss
@@ -44,12 +44,8 @@
       align-items: center;
       overflow: hidden;
       // transition: all 0.3s ease-out;
-
+      
       @include lg {
-        min-width: 400px;
-      }
-
-      @include md {
         min-width: auto;
         max-height: 0;
         display: none;
@@ -147,7 +143,7 @@
       &.open span:last-child {
         transform: rotate(-45deg) translate(4px, -4px);
       }
-      @include md {
+      @include lg {
         position: relative;
         z-index: 5;
         display: block;
